--- a/index.html
+++ b/index.html
@@ -295,30 +295,11 @@
     <a href="#cake-pops">Cake Pops</a>
     <a href="#dessert-jars">Dessert Jars</a>
     <a href="#kids-baking">Class</a>
-    <a href="#cake-cart">Cake Cart</a>
     <a href="#contact">Contact</a>
-    <!-- Header Join VIP opens WhatsApp modal -->
-    <a href="javascript:void(0);" id="joinVipBtn">Join VIP List</a>
   </nav>
 </header>
 
 <main>
-  <!-- Cake Cart moved to top -->
-  <section id="cake-cart">
-    <h2>COMING SOON: Oh My Nosh Cake Cart</h2>
-    <p>A mobile slice of heaven is about to roll in...</p>
-    <p><strong>Elegant design. Gourmet treats. Unforgettable moments.</strong><br />
-       Perfect for birthdays, weddings, pop-ups—and all things sweet!</p>
-    <p>Get early access &amp; launch-day specials</p>
-    <button id="vipListBtn" style="background-color: #c08081; color: white; padding: 12px 24px; font-size: 1rem; border: none; border-radius: 30px; cursor: pointer; font-weight: 600;">
-      Join the VIP List
-    </button>
-    <p style="margin-top: 16px; font-style: italic; color: #666;">
-      Stay tuned. Something seriously delicious is headed your way!
-    </p>
-    <img src="cake-cart.png" alt="Elegant Cake Cart" style="max-width:100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);" />
-  </section>
-
   <section id="cakes"><h1>Cakes</h1><div class="products-grid" id="cakes-grid"></div></section>
   <section id="cookies"><h1>Cookies</h1><div class="products-grid" id="cookies-grid"></div></section>
   <section id="cupcakes"><h1>Cupcakes</h1><div class="products-grid" id="cupcakes-grid"></div></section>
@@ -354,7 +335,7 @@
   </section>
 </main>
 
-<!-- WhatsApp Modal for Enquiry -->
+<!-- WhatsApp Modal -->
 <div class="modal-overlay" id="whatsappModal" role="dialog" aria-modal="true" aria-labelledby="whatsappModalTitle" tabindex="-1">
   <div class="modal">
     <div class="close-btn" id="closeModalBtn" role="button" tabindex="0" aria-label="Close form">×</div>
@@ -374,153 +355,188 @@
   </div>
 </div>
 
-<!-- Old VIP Modal (can keep or remove if unused) -->
-<div class="modal-overlay" id="vipModal" role="dialog" aria-modal="true" aria-labelledby="vipModalTitle" tabindex="-1">
-  <div class="modal">
-    <div class="close-btn" id="closeVipModalBtn" role="button" tabindex="0" aria-label="Close VIP form">×</div>
-    <h3 id="vipModalTitle">Join Our VIP List</h3>
-    <form id="vipForm">
-      <label for="vip-name">Name</label>
-      <input type="text" id="vip-name" name="vip-name" required />
-
-      <label for="vip-phone">Phone Number</label>
-      <input type="tel" id="vip-phone" name="vip-phone" placeholder="+27..." required />
-
-      <label for="vip-message">Message (optional)</label>
-      <textarea id="vip-message" name="vip-message" rows="3" placeholder="Anything you'd like to add"></textarea>
-
-      <button type="submit">Send via WhatsApp</button>
-    </form>
-  </div>
-</div>
-
-<!-- New Simple VIP Modal -->
-<div class="modal-overlay" id="simpleVipModal" role="dialog" aria-modal="true" aria-labelledby="simpleVipModalTitle" tabindex="-1">
-  <div class="modal">
-    <div class="close-btn" id="closeSimpleVipModalBtn" role="button" tabindex="0" aria-label="Close VIP form">×</div>
-    <h3 id="simpleVipModalTitle">Join the VIP List</h3>
-    <form id="simpleVipForm">
-      <label for="simple-vip-name">Name</label>
-      <input type="text" id="simple-vip-name" name="simple-vip-name" required />
-
-      <label for="simple-vip-phone">Phone Number</label>
-      <input type="tel" id="simple-vip-phone" name="simple-vip-phone" placeholder="+27..." required />
-
-      <button type="submit">Send via WhatsApp</button>
-    </form>
-  </div>
-</div>
-
 <script>
-  // Modal open/close logic
+  const imageSections = [
+    { id: 'cakes-grid', base: 'Cake' },
+    { id: 'cookies-grid', base: 'Cookies' },
+    { id: 'cupcakes-grid', base: 'Cupcake' },
+    { id: 'cakes-cookies-grid', base: 'Cake&Cookies' },
+    { id: 'cake-pops-grid', base: 'CakePops' },
+    { id: 'dessert-jars-grid', base: 'DessertJars' },
+    { id: 'kids-baking-grid', base: 'Class' }
+  ];
+  document.addEventListener('DOMContentLoaded', () => {
+    imageSections.forEach(({id, base}) => {
+      let count = 1, fail = 0;
+      const load = () => {
+        if (fail >= 5) return;
+        const img = new Image();
+        img.src = `${base}${count}.jpg`;
+        img.onload = () => {
+          const card = document.createElement('div');
+          card.className = 'product-card';
+          card.appendChild(img);
+          document.getElementById(id).appendChild(card);
+          count++; fail = 0; load();
+        };
+        img.onerror = () => { fail++; count++; load(); };
+      };
+      load();
+    });
+  });
+
+  // WhatsApp Modal JS
   const whatsappBtn = document.getElementById('whatsappBtn');
   const whatsappModal = document.getElementById('whatsappModal');
   const closeModalBtn = document.getElementById('closeModalBtn');
-
-  const vipListBtn = document.getElementById('vipListBtn');
-  const simpleVipModal = document.getElementById('simpleVipModal');
-  const closeSimpleVipModalBtn = document.getElementById('closeSimpleVipModalBtn');
-  const joinVipBtn = document.getElementById('joinVipBtn');
+  const enquiryTypeSelect = document.getElementById('enquiry-type');
+  const dynamicFieldsDiv = document.getElementById('dynamic-fields');
+  const whatsappForm = document.getElementById('whatsappForm');
 
   whatsappBtn.addEventListener('click', () => {
     whatsappModal.classList.add('active');
     whatsappModal.focus();
   });
-
   closeModalBtn.addEventListener('click', () => {
     whatsappModal.classList.remove('active');
-  });
-  whatsappModal.addEventListener('keydown', (e) => {
-    if(e.key === 'Escape') whatsappModal.classList.remove('active');
-  });
-
-  vipListBtn.addEventListener('click', () => {
-    simpleVipModal.classList.add('active');
-    simpleVipModal.focus();
-  });
-  joinVipBtn.addEventListener('click', () => {
-    simpleVipModal.classList.add('active');
-    simpleVipModal.focus();
-  });
-  closeSimpleVipModalBtn.addEventListener('click', () => {
-    simpleVipModal.classList.remove('active');
-  });
-  simpleVipModal.addEventListener('keydown', (e) => {
-    if(e.key === 'Escape') simpleVipModal.classList.remove('active');
+    whatsappForm.reset();
+    dynamicFieldsDiv.innerHTML = '';
+    whatsappBtn.focus();
   });
 
-  // Dynamic fields for WhatsApp form based on enquiry type
-  const enquiryType = document.getElementById('enquiry-type');
-  const dynamicFields = document.getElementById('dynamic-fields');
+  // Close modal on overlay click
+  whatsappModal.addEventListener('click', (e) => {
+    if (e.target === whatsappModal) {
+      closeModalBtn.click();
+    }
+  });
 
-  enquiryType.addEventListener('change', () => {
-    dynamicFields.innerHTML = ''; // Clear previous fields
-    const val = enquiryType.value;
-    if (val === 'Weddings') {
-      dynamicFields.innerHTML = `
-        <label for="wedding-date">Wedding Date</label>
-        <input type="date" id="wedding-date" name="wedding-date" required />
-        <label for="guest-count">Guest Count</label>
-        <input type="number" id="guest-count" name="guest-count" min="1" required />
+  // Close modal on ESC key
+  document.addEventListener('keydown', (e) => {
+    if(e.key === 'Escape' && whatsappModal.classList.contains('active')) {
+      closeModalBtn.click();
+    }
+  });
+
+  enquiryTypeSelect.addEventListener('change', function() {
+    const val = this.value;
+    dynamicFieldsDiv.innerHTML = '';
+
+    if(val === 'Weddings') {
+      dynamicFieldsDiv.innerHTML = `
+        <label for="name">Name</label>
+        <input id="name" name="name" required />
+
+        <label for="date">Wedding Date</label>
+        <input type="date" id="date" name="date" required min="${new Date().toISOString().split('T')[0]}" />
+
+        <label for="budget">Budget</label>
+        <input type="text" id="budget" name="budget" placeholder="e.g. R5000 - R10000" />
+
+        <label for="details">Details (optional)</label>
+        <textarea id="details" name="details" rows="3" placeholder="Additional information"></textarea>
       `;
-    } else if (val === 'Kids Baking Class') {
-      dynamicFields.innerHTML = `
-        <label for="child-name">Child's Name</label>
-        <input type="text" id="child-name" name="child-name" required />
-        <label for="child-age">Child's Age</label>
-        <input type="number" id="child-age" name="child-age" min="1" max="18" required />
+    } else if(val === 'Kids Baking Class') {
+      dynamicFieldsDiv.innerHTML = `
+        <label for="name">Name</label>
+        <input id="name" name="name" required />
+
+        <label for="date">Date</label>
+        <input type="date" id="date" name="date" required min="${new Date().toISOString().split('T')[0]}" />
+
+        <label for="age-group">Age Group</label>
+        <select id="age-group" name="age-group" required>
+          <option value="" disabled selected>Select age group</option>
+          <option value="3-5 years">3-5 years</option>
+          <option value="6-8 years">6-8 years</option>
+          <option value="9-12 years">9-12 years</option>
+        </select>
+
+        <label for="num-children">Number of Children</label>
+        <input type="number" id="num-children" name="num-children" min="1" required />
       `;
-    } else if (val === 'Birthday') {
-      dynamicFields.innerHTML = `
-        <label for="birthday-date">Birthday Date</label>
-        <input type="date" id="birthday-date" name="birthday-date" required />
-        <label for="birthday-age">Age Turning</label>
-        <input type="number" id="birthday-age" name="birthday-age" min="1" required />
+    } else if(val === 'Birthday') {
+      dynamicFieldsDiv.innerHTML = `
+        <label for="name">Name</label>
+        <input id="name" name="name" required />
+
+        <label for="date">Date</label>
+        <input type="date" id="date" name="date" required min="${new Date().toISOString().split('T')[0]}" />
+
+        <label for="budget">Budget</label>
+        <input type="text" id="budget" name="budget" placeholder="e.g. R3000 - R7000" />
+      `;
+    } else if(val === 'General Enquiry') {
+      dynamicFieldsDiv.innerHTML = `
+        <label for="budget">Budget</label>
+        <input type="text" id="budget" name="budget" placeholder="Optional" />
+
+        <label for="msg">Message</label>
+        <textarea id="msg" name="msg" required rows="4"></textarea>
       `;
     }
   });
 
-  // WhatsApp form submission
-  const whatsappForm = document.getElementById('whatsappForm');
-  whatsappForm.addEventListener('submit', (e) => {
+  whatsappForm.addEventListener('submit', function(e) {
     e.preventDefault();
-    const enquiry = enquiryType.value;
-    let msg = `Hello! I have an enquiry regarding *${enquiry}*.%0A`;
-    if(enquiry === 'Weddings') {
-      const date = document.getElementById('wedding-date').value;
-      const guests = document.getElementById('guest-count').value;
-      msg += `Wedding Date: ${date}%0AGuest Count: ${guests}`;
-    } else if (enquiry === 'Kids Baking Class') {
-      const name = document.getElementById('child-name').value;
-      const age = document.getElementById('child-age').value;
-      msg += `Child's Name: ${name}%0AChild's Age: ${age}`;
-    } else if (enquiry === 'Birthday') {
-      const date = document.getElementById('birthday-date').value;
-      const age = document.getElementById('birthday-age').value;
-      msg += `Birthday Date: ${date}%0AAge Turning: ${age}`;
-    } else {
-      msg += "Please provide more details.";
-    }
-    const phone = "+27799750908"; // Your WhatsApp number with country code, no spaces
-    const url = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
-    window.open(url, '_blank');
-  });
-
-  // Simple VIP form submission
-  const simpleVipForm = document.getElementById('simpleVipForm');
-  simpleVipForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    const name = document.getElementById('simple-vip-name').value.trim();
-    const phone = document.getElementById('simple-vip-phone').value.trim();
-    if(!name || !phone) {
-      alert("Please enter both your name and phone number.");
+    const type = enquiryTypeSelect.value;
+    if(!type) {
+      alert('Please select an enquiry type.');
       return;
     }
-    const msg = `Hello! I want to join the Oh My Nosh VIP List.%0AName: ${name}%0APhone: ${phone}`;
-    const waNumber = "+27799750908"; // Your WhatsApp number with country code
-    const waUrl = `https://wa.me/${waNumber}?text=${encodeURIComponent(msg)}`;
-    window.open(waUrl, '_blank');
+    let text = `Hello Oh My Nosh! I have an enquiry about *${type}*.`;
+
+    if(type === 'General Enquiry') {
+      const budget = document.getElementById('budget').value.trim();
+      const msg = document.getElementById('msg').value.trim();
+      if(!msg) {
+        alert('Please enter your message.');
+        return;
+      }
+      if(budget) {
+        text += `%0ABudget: ${encodeURIComponent(budget)}`;
+      }
+      text += `%0A%0AMessage: ${encodeURIComponent(msg)}`;
+    } else if(type === 'Kids Baking Class') {
+      const name = document.getElementById('name').value.trim();
+      const date = document.getElementById('date').value.trim();
+      const ageGroup = document.getElementById('age-group').value;
+      const numChildren = document.getElementById('num-children').value.trim();
+
+      if(!name || !date || !ageGroup || !numChildren) {
+        alert('Please fill in all required fields.');
+        return;
+      }
+      text += `%0AName: ${encodeURIComponent(name)}`;
+      text += `%0ADate: ${encodeURIComponent(date)}`;
+      text += `%0AAge Group: ${encodeURIComponent(ageGroup)}`;
+      text += `%0ANumber of Children: ${encodeURIComponent(numChildren)}`;
+    } else { // Weddings or Birthday
+      const name = document.getElementById('name').value.trim();
+      const date = document.getElementById('date').value.trim();
+      const budget = document.getElementById('budget') ? document.getElementById('budget').value.trim() : '';
+
+      if(!name || !date) {
+        alert('Please fill in all required fields.');
+        return;
+      }
+      text += `%0AName: ${encodeURIComponent(name)}`;
+      text += `%0ADate: ${encodeURIComponent(date)}`;
+      if(budget) {
+        text += `%0ABudget: ${encodeURIComponent(budget)}`;
+      }
+      if(type === 'Weddings') {
+        const details = document.getElementById('details').value.trim();
+        if(details) text += `%0ADetails: ${encodeURIComponent(details)}`;
+      }
+    }
+    window.open(`https://wa.me/27799750908?text=${text}`, '_blank');
+    whatsappModal.classList.remove('active');
+    whatsappForm.reset();
+    dynamicFieldsDiv.innerHTML = '';
+    whatsappBtn.focus();
   });
 </script>
+
 </body>
 </html>
