--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
   <!-- Cake Cart Launch Section -->
   <section id="cake-cart-section" aria-label="Cake Cart Launch">
     <h2>Our Cake Cart Launch is Coming Soon!</h2>
-    <img src="cakecart1.jpg" alt="Elegant white cake cart" />
+    <img src="cakecart1.png" alt="Elegant white cake cart" />
     <div id="countdown" aria-live="polite" aria-atomic="true">Loading countdown...</div>
     <div id="now-live" role="alert">🎉 The Cake Cart is Now Live! 🎉</div>
     <button id="join-vip-btn" aria-haspopup="dialog" aria-controls="vipModal" aria-expanded="false">Join Our VIP List</button>
