--- a/index.html
+++ b/index.html
@@ -297,8 +297,9 @@
   <ul class="cart-steps">
     <li>Pick your cake flavour</li>
     <li>Pick your icing flavour</li>
-    <li>Pick any 3 toppings</li>
+    <li>Pick any 9 toppings</li>
     <li>Pick your sauce</li>
+    <li>Get in touch for more information</li>
   </ul>
 </section>
 
@@ -469,7 +470,7 @@ sections.forEach(section => {
       if(msg) text+=`%0AMessage: ${encodeURIComponent(msg)}`;
       if(budget) text+=`%0ABudget: ${encodeURIComponent(budget)}`;
     }
-    window.open(`https://wa.me/27824502527?text=${text}`, '_blank');
+    window.open(`https://wa.me/2799750908?text=${text}`, '_blank');
   });
 </script>
 
